--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.7.1",
     "hardhat": "^2.17.3",
-    "hardhat-deploy": "^0.11.26",
+    "hardhat-deploy": "^0.11.25",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.4",
     "solidity-coverage": "^0.8.2",
@@ -47,8 +47,10 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
+    "@openzeppelin/contracts-upgradeable": "^5.0.1",
     "dotenv": "^16.0.3",
     "envfile": "^6.18.0",
-    "qrcode": "^1.5.1"
+    "qrcode": "^1.5.1",
+    "solady": "^0.0.153"
   }
 }
